# OrbitMind-Living-Q-Core

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  compose.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
artifacts/: .gitkeep
cache/: .gitkeep
data/samples/: catalog.json  iss_zarya.tle
docs/: ORBITMIND_PHASE_U1_SAMPLE_RUNNER_REPORT.md  ORBITMIND_PHASE_U2_3_VISUAL_REVIEWER_ACCEPTANCE_REPORT.md  ORBITMIND_PHASE_U2_4_REVIEWER_HANDOFF_REPORT.md  ORBITMIND_REVIEWER_DEMO_GUIDE.md
docs/architecture/: AUTHORITY_AND_CAPABILITY_GRANTS.md  CAMERA_CREATION_GOAL_AND_PROPOSAL.md  CAMERA_RAW_BODY_CSRF_AND_RUNTIME_ROOT.md  CELESTRAK_VERIFICATION.md  CLAIMS_AND_EVIDENCE.md  CUSTOM_TLE_TRANSIENT_HANDOFF_ARCHITECTURE.md  DASHBOARD_VIEW_SPECIFICATION.md  DATA_MODEL.md  DATA_RIGHTS_AND_SOURCE_POLICY.md  DEPLOYMENT_ARCHITECTURE.md  DETERMINISTIC_RETRIEVAL.md  DOMAIN_MODEL.md  EVALUATION_STRATEGY.md  GOVERNED_LOCAL_PORT_SELECTION.md  GOVERNED_RESEARCH_LEARNING_LOOP.md  KNOWLEDGE_GRAPH_RELATIONS.md  LABORATORY_FRAMEWORK.md  LOCAL_CAMERA_CREATION_STUDIO.md  LOCAL_RUNTIME_ARCHITECTURE.md  MAP_ORBIT_DTO_CONTRACT.md  MAP_ORBIT_VIEW_SPECIFICATION.md  MISSION_LIFECYCLE.md  MISSION_WINDOW_ENGINE.md  MODULE_BOUNDARIES.md  OBSERVABILITY_MODEL.md  OBSERVATION_STUDY_VISUAL_MANIFEST_CONTRACT.md  OPTIMIZATION_BENCHMARK_VISUAL_MANIFEST_CONTRACT.md  PHASE_5_VISUAL_PLANNING_CLOSURE_AUDIT.md  POSTGRESQL_ARCHITECTURE.md  PRODUCT_SUMMARY_READ_SURFACE_CONTRACT.md  PROVENANCE_STUDY_GRAPH_API_CONTRACT.md  PROVENANCE_STUDY_GRAPH_SEMANTICS.md  QUANTUM_BENCHMARK_POLICY.md  QUANTUM_OPTIMIZATION_BOUNDARY.md  QUBO_ENCODING.md  REFERENCE_RECONCILIATION.md  RISK_REGISTER.md  ROADMAP.md  SATELLITE_OBSERVATION_SCHEDULING.md  SCIENTIFIC_MEMORY.md  (+14 more)
docs/development/: ADDING_AN_OPTIMIZATION_PROBLEM.md  ADDING_A_CONCEPT.md  ADDING_A_JPL_CONNECTOR.md  ADDING_A_SOLVER.md  ADDING_A_SOURCE_CONNECTOR.md  ADDING_A_SPACE_OBJECT_TYPE.md  API_EXAMPLE.md  DEVELOPMENT.md  INGESTING_DOCUMENTS.md  OBSERVATION_STUDY_API_FLOW.md  REGISTERING_CLAIMS.md
docs/guides/: CAMERA_STUDIO_EPHEMERAL_ALPHA_GUIDE.md
docs/operations/: CACHE_AND_FRESHNESS.md  DATABASE_MIGRATION_BACKUP.md  FIRST_TRUSTED_OPERATOR_BOUNDARY.md  FIRST_TRUSTED_OPERATOR_DRY_RUN.md  JPL_SOURCE_OPERATIONS.md  MEMORY_BACKUP_AND_RECOVERY.md  OPTIMIZATION_BENCHMARKS.md  POSTGRESQL_LOCAL_OPERATIONS.md  QUANTUM_EXPERIMENT_OPERATIONS.md  RETRIEVAL_EVALUATION.md  RUNBOOK.md  SMALL_BODY_CACHE_AND_FRESHNESS.md  SOLO_ALPHA_END_TO_END_ACCEPTANCE.md  (+5 more)
examples/: quantum_simulator_v0_demo.py
migrations/: env.py
packaging/: orbitmind.spec
requirements/: u5.0b0-windows-py312.lock.txt
scripts/: build_windows_poc.ps1  extract_docx.py  pg_backup_smoke_populate.py  pg_validate.py  verify_windows_poc.ps1
tests/: conftest.py  signing_fixtures.py  test_admission_acceptance.py  test_admission_api.py  test_admission_api_architecture.py  test_admission_architecture.py  test_admission_contracts.py  test_admission_evidence_chain.py  test_admission_policy.py  test_admission_repository.py  test_admission_service_architecture.py  test_admission_services.py  test_alembic_metadata_completeness.py  test_api_errors.py  test_architecture_boundaries.py  test_authority_architecture.py  test_authority_contracts.py  test_authority_evaluation.py  test_authority_operator_api.py  test_authority_persistence.py  test_authority_service_architecture.py  test_authority_service_transactions.py  test_authority_services.py  test_authority_workbench.py  test_browser_security_headers.py  test_camera_csrf_runtime_foundation.py  test_camera_ephemeral_media_session.py  test_camera_explicit_frame_submission.py  test_camera_preview_sandbox.py  test_camera_session_contracts.py  test_custom_tle_transient_handoff.py  test_database_engine_resilience.py  test_evidence_signing_config.py  test_governed_research_learning.py  test_laboratory_api.py  test_laboratory_architecture.py  test_laboratory_contracts.py  test_laboratory_registry.py  test_laboratory_workbench.py  test_memory_api.py  (+79 more)
(+405 files in other folders)
