[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orbitmind"
version = "0.1.0"
description = "OrbitMind Living Q-Core — evidence-grounded scientific intelligence platform (Phase 0/1: orbital vertical slice)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "OrbitMind" }]
keywords = ["orbital", "satellite", "sgp4", "scientific-computing", "fastapi"]

# Phase 0/1 runtime dependencies only. The full platform stack (Redis, Temporal,
# pgvector, Astropy, pandas, etc.) is intentionally NOT listed here — see ROADMAP.md.
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "sgp4>=2.23,<3.0",
    "matplotlib>=3.9,<4.0",
    "numpy>=2.0,<3.0",
    "structlog>=24.1",
    # Phase 2: a small, well-established async/sync HTTP client (already present via
    # the FastAPI test stack) for the CelesTrak connector. No large SDK is used.
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
# Bounded quantum adapter dependencies. NOT required by the orbital vertical slice.
quantum = [
    "qiskit>=1.2",
    "qiskit-aer>=0.15",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
]

[project.urls]
Documentation = "https://example.invalid/orbitmind/docs"
Repository = "https://example.invalid/orbitmind"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

# --------------------------------------------------------------------------
# Ruff — linting + formatting
# --------------------------------------------------------------------------
[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # flake8-bugbear
    "UP",       # pyupgrade
    "C4",       # flake8-comprehensions
    "SIM",      # flake8-simplify
    "PTH",      # flake8-use-pathlib
    "RUF",      # ruff-specific
]
ignore = [
    "B008",  # function call in argument defaults (FastAPI Depends() idiom)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
# Alembic autogenerates long create_index/create_table lines; don't fight the format.
"migrations/versions/*" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["orbitmind"]

# --------------------------------------------------------------------------
# mypy — near-strict; relaxed only for third-party libs lacking stubs
# --------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
packages = ["orbitmind"]
mypy_path = "src"
strict = true
warn_unreachable = true
warn_no_return = true
show_error_codes = true
pretty = true
# These scientific/orbital/quantum libs are treated as untyped boundaries: do not
# type-check into them or fail our build on their (absent or noisy) stubs.
[[tool.mypy.overrides]]
module = ["sgp4.*", "matplotlib.*", "qiskit.*", "qiskit_aer.*"]
ignore_missing_imports = true
follow_imports = "skip"

# --------------------------------------------------------------------------
# pytest + coverage
# --------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --strict-markers --strict-config --import-mode=importlib"
markers = [
    "integration: end-to-end tests exercising the API/workflow (still fully offline)",
    "quantum: tests that exercise the optional Qiskit adapter",
]
filterwarnings = ["error::DeprecationWarning:orbitmind.*"]

[tool.coverage.run]
source = ["orbitmind"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
